--- a/app/micronaut-cli.yml
+++ b/app/micronaut-cli.yml
@@ -1,6 +1,6 @@
 applicationType: cli
-defaultPackage: app
+defaultPackage: it.tau2m
 testFramework: junit
 sourceLanguage: java
 buildTool: maven
-features: [annotation-api, app-name, java, junit, logback, maven, picocli, picocli-java-application, picocli-junit, readme, shade, yaml]
+features: [app-name, graalvm, http-client-test, java, junit, logback, maven, maven-enforcer-plugin, picocli, picocli-java-application, picocli-junit, properties, readme, serialization-jackson, shade, validation]
